# claude-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  __main__.py  config.py  main.py
backend/api/: __init__.py  agent_configs.py  channel.py  channel_wechat.py  chat.py  knowledge_base.py  mcp_servers.py  sessions.py  skills.py  tools.py
backend/api/schemas/: __init__.py  agent_config.py  chat.py  knowledge_base.py  mcp_server.py  session.py
backend/core/: __init__.py  agent_service.py  tool_executor.py
backend/core/agent/: __init__.py  approval.py  builder.py  events.py  hooks.py  loop.py  runner.py  session.py  utils.py
backend/core/channel/: __init__.py  base.py  service.py  types.py  wechat.py
backend/core/context/: __init__.py  manager.py  token_counter.py
backend/core/mcp/: __init__.py  client.py  manager.py  types.py
backend/core/prompt/: __init__.py  builder.py  providers.py
backend/core/rag/: embedding.py  pipeline.py  query_rewriter.py  types.py  vector_store.py
backend/core/skills/: __init__.py  loader.py  registry.py  types.py
backend/core/tools/: __init__.py  base.py  (+8 more)
backend/db/: __init__.py  database.py
backend/middleware/: __init__.py  auth.py
data/: claude_agent.db
docs/: ARCHITECTURE.md  RAG_EMBEDDING_API.md  ROADMAP.md  WEB_ARCHITECTURE.md
scripts/: test_cache.py
skills/code_analyzer/: SKILL.md
skills/code_review/: SKILL.md
tests/: test_pdf_extraction.py
tests/rag/: eval_retrieval.py
web/: next.config.ts  package.json  pnpm-lock.yaml
(+87 files in other folders)
